--- a/package.json
+++ b/package.json
@@ -10,38 +10,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.16",
-    "@angular/common": "~12.2.16",
-    "@angular/compiler": "~12.2.16",
-    "@angular/compiler-cli": "~12.2.16",
-    "@angular/core": "~12.2.16",
-    "@angular/forms": "~12.2.16",
-    "@angular/localize": "~12.2.16",
-    "@angular/platform-browser": "~12.2.16",
-    "@angular/platform-browser-dynamic": "~12.2.16",
-    "@angular/router": "~12.2.16",
-    "@ng-bootstrap/ng-bootstrap": "latest",
-    "@popperjs/core": "^2.10.2",
+    "rxjs": "7.5.6",
+    "tslib": "2.3.0",
+    "core-js": "3.15.1",
+    "zone.js": "0.11.8",
+    "@angular/core": "14.2.2",
+    "@angular/forms": "14.2.2",
+    "@angular/common": "14.2.2",
+    "@angular/router": "14.2.2",
+    "@angular/compiler": "14.2.2",
+    "@angular/animations": "14.2.2",
+    "@angular/platform-browser": "14.2.2",
+    "@angular/platform-browser-dynamic": "14.2.2",
+    "@angular/compiler-cli": "14.2.2",
+    "@angular/localize": "14.2.2",
+    "@ng-bootstrap/ng-bootstrap": "13.0.0",
+    "@popperjs/core": "2.11.6",
+    "typescript": "4.7.4",
     "@progress/kendo-angular-buttons": "latest",
     "@progress/kendo-angular-common": "latest",
     "@progress/kendo-angular-dialog": "latest",
     "@progress/kendo-angular-l10n": "latest",
     "@progress/kendo-angular-popup": "latest",
     "@progress/kendo-licensing": "latest",
-    "core-js": "3.21.1",
-    "rxjs": "7.5.2",
-    "tslib": "2.3.0",
-    "typescript": "4.3.4",
-    "web-animations-js": "^2.3.2",
-    "zone.js": "~0.11.4"
+    "web-animations-js": "^2.3.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "~12.2.16",
-    "@angular/compiler-cli": "~12.2.16",
-    "@angular/router": "~12.2.16",
-    "@angular/localize": "~12.2.16",
-    "@types/node": "12.11.1",
-    "typescript": "4.3.4"
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   }
 }
