2 files modified, 1 added, 1 deleted

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@progress/kendo-angular-l10n": "latest",
     "@progress/kendo-angular-popup": "latest",
     "@progress/kendo-licensing": "latest",
+    "@progress/kendo-theme-bootstrap": "latest",
     "web-animations-js": "^2.3.2"
   },
   "devDependencies": {
