--- a/package.json
+++ b/package.json
@@ -10,23 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "7.5.6",
-    "tslib": "2.3.0",
-    "core-js": "3.15.1",
-    "zone.js": "0.11.8",
+    "@angular/animations": "14.2.2",
+    "@angular/common": "14.2.2",
+    "@angular/compiler": "14.2.2",
+    "@angular/compiler-cli": "14.2.2",
     "@angular/core": "14.2.2",
     "@angular/forms": "14.2.2",
-    "@angular/common": "14.2.2",
-    "@angular/router": "14.2.2",
-    "@angular/compiler": "14.2.2",
-    "@angular/animations": "14.2.2",
+    "@angular/localize": "14.2.2",
     "@angular/platform-browser": "14.2.2",
     "@angular/platform-browser-dynamic": "14.2.2",
-    "@angular/compiler-cli": "14.2.2",
-    "@angular/localize": "14.2.2",
+    "@angular/router": "14.2.2",
     "@ng-bootstrap/ng-bootstrap": "13.0.0",
     "@popperjs/core": "2.11.6",
-    "typescript": "4.7.4",
     "@progress/kendo-angular-buttons": "latest",
     "@progress/kendo-angular-common": "latest",
     "@progress/kendo-angular-dialog": "latest",
@@ -34,7 +29,14 @@
     "@progress/kendo-angular-popup": "latest",
     "@progress/kendo-licensing": "latest",
     "@progress/kendo-theme-bootstrap": "latest",
-    "web-animations-js": "^2.3.2"
+    "bootstrap-scss": "^5.2.1",
+    "bootswatch": "^5.2.1",
+    "core-js": "3.15.1",
+    "rxjs": "7.5.6",
+    "tslib": "2.3.0",
+    "typescript": "4.7.4",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
